--- a/ironchain-admin/src/main/webapp/static/css/main.css
+++ b/ironchain-admin/src/main/webapp/static/css/main.css
@@ -40,3 +40,6 @@
 table.dataTable.no-footer {
     border-bottom: 1px solid #ddd!important;
 }
+table.dataTable thead th, table.dataTable thead td{
+	padding: 10px!important;
+}
