--- a/ironchain-admin/src/main/webapp/static/plugins/layui/css/global.css
+++ b/ironchain-admin/src/main/webapp/static/plugins/layui/css/global.css
@@ -6,8 +6,8 @@
 
 /* 头部 */
 .header{height: 59px; border-bottom: 1px solid #404553;  background-color: #393D49; color: #fff;}
-.logo{position: absolute; left: 0; top: 18px;}
-.logo img{width: 82px; height: 31px;}
+.logo{position: absolute; left: 0;}
+.logo img{width: 85px;}
 
 .header .layui-nav{position: absolute; right: 0; top: 0; padding: 0; background: none;}
 .header .layui-nav .layui-nav-item{margin: 0 20px; line-height: 66px;}
